[package]
name = "bsplice"
version = "0.1.0"
edition = "2021"

[features]
native_tls = ["dep:tokio-native-tls"]
rustls = ["dep:tokio-rustls", "dep:webpki-roots", "dep:rustls-pemfile"]

[dependencies]
clap = { version = "4.4.18", features = ["unicode", "derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.25.0", optional = true }
webpki-roots = { version = "0.26.1", optional = true }
rustls-pemfile = { version = "2.0.0", optional = true }
